src/objects/BLP_Training_Dates__c.object
<CustomObject>
    <fields>
        <fullName>BLP_Additional_Instructions__c</fullName>
        <label>Additional Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Expert_Email__c</fullName>
        <description>Course Expert Email will be filled from Course-&gt; Course Expert Email by Process Builder BLP Course Summary Notification (Training Date)</description>
        <label>Course Expert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Expert__c</fullName>
        <formula>BLP_Course__r.BLP_Course_Expert__c</formula>
        <label>Course Expert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Location__c</fullName>
        <label>Course Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Room__c</fullName>
        <label>Course Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Course_Summary_Notifications_Date__c</fullName>
        <formula>BLP_Training_Date_Time__c - VALUE(TEXT(BLP_Course__r.BLP_Course_Summary_Notifications_Days__c)) + 1</formula>
        <label>Course Summary Notifications Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course</label>
        <referenceTo>BLP_Course__c</referenceTo>
        <relationshipLabel>Training Dates</relationshipLabel>
        <relationshipName>Training_Dates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLP_Max_Capacity__c</fullName>
        <label>Max Capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Min_Capacity__c</fullName>
        <label>Min Capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Number_of_Attendees_Registered__c</fullName>
        <label>Number of Attendees Registered</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Number_on_Waitlist__c</fullName>
        <label>Number on Waitlist</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLP_Prework_Due_Days__c</fullName>
        <label>Prework Due Days</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Reference_Person_Email__c</fullName>
        <label>Reference Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BLP_Reference_Person__c</fullName>
        <label>Reference Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Tech_Support_Email__c</fullName>
        <description>Tech Support Email will be filled from Course-&gt; Tech Support Email by Process Builder BLP Course Summary Notification (Training Date)</description>
        <label>Tech Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BLP_Tech_Support__c</fullName>
        <formula>BLP_Course__r.BLP_Tech_Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Training_Date_Time__c</fullName>
        <label>Training Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Training Dates</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Training Dates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Dates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>